@@ -127,12 +127,11 @@ function fs_is_executable($filename) {
 }
 
 function fs_import_filename($filename, $for_exec = true) {
-	if ($for_exec) {
-	    echo debugMessage("fs_import_filename",__FILE__,__LINE__);
-		$filename = escapeshellarg($filename); // Might as well use the function PHP provides!
-	}
+    if ($for_exec) {
+	$filename = escapeshellarg($filename); // Might as well use the function PHP provides!
+    }
 	
-	return $filename;
+    return $filename;
 }
 
 function fs_export_filename($filename) {
